--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="lc-block">
-                        <span editable="inline" class="small mt-4 d-block">LOREM IPSUM</span>
+                        <span editable="inline" class="small mt-4 d-block">Made By Humans Worn By Aesthetic</span>
                         <h2 editable="inline" class="display-2 mb-0"><b>About us</b></h2>
                         <p editable="inline" class="text-capitalize"> We are Sungudi Manufacturing company over four Generations,We produce sarees
                             with colour guaranteed and send them world wide.
