--- a/gallery.html
+++ b/gallery.html
@@ -68,7 +68,7 @@
             <div class="row ">
                 <div class="col-md-8 offset-md-2">
                     <div class="lc-block text-center">
-                        <span editable="inline" class="small mt-4 d-block">LOREM IPSUM</span>
+                        <span editable="inline" class="small mt-4 d-block">Made By Humans Worn By Aesthetic</span>
                         <h2 editable="inline" class="display-2 mb-0"><b>Gallery</b></h2>
                         <p editable="inline"> We are committed to working with our
                             <br> partners and customers to develop products that make a difference in the world.
